--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"react-native": "0.50.4",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.21",
-		"reactotron-react-native": "^1.13.2"
+		"react-redux": "^5.0.6",
+		"reactotron-react-native": "^1.13.2",
+		"reactotron-redux": "^1.13.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.0.3",
