--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"react-navigation": "^1.0.0-beta.21",
 		"react-redux": "^5.0.6",
 		"reactotron-react-native": "^1.13.2",
-		"reactotron-redux": "^1.13.0"
+		"reactotron-redux": "^1.13.0",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.0.3",
